--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="status" style="font-family: sans-serif; font-weight:300">Loading</div>
 </div>
 <script type="text/javascript">
-  (function() {
+  window.onload = function() {
     try {
       var url = "http://mysocialtrip.appspot.com/site/index/app?client=phonegap/1.0";
       var xhr;
@@ -38,7 +38,8 @@
     }
     document.getElementById("status").innerHTML =
         "Click to reconnect";
-  })();
+  };
+  window.onunload = function(){};
 </script>
 </body>
 </html>
