--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
   window.onload = function() {
     try {
-      var url = "http://192.168.100.213:24783/site/index/app?client=phonegap/1.0";
+      var url = " http://29a8b6d6.ngrok.com/site/index/app?client=phonegap/1.0";
       var xhr;
       if (window.XMLHttpRequest) {
         xhr = new XMLHttpRequest();
