--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <script type="text/javascript" src="phonegap.js"></script>
+  <script src="http://192.168.0.17:7777/target/target-script-min.js#anonymous"></script>
+  <script src="phonegap.js"></script>
+  <script src="cdv-plugin-fb-connect.js"></script>
+  <script src="facebook-js-sdk.js"></script>
 </head>
 <body>
 <div style="text-align: center" onclick='document.location.reload()'>
@@ -11,9 +14,9 @@
   <div id="status" style="font-family: sans-serif; font-weight:300">Loading</div>
 </div>
 <script type="text/javascript">
-  document.addEventListener('deviceready', function() {
+  window.onload = function() {
     try {
-      var url = " http://29a8b6d6.ngrok.com/site/index/app?client=phonegap/1.0";
+      var url = "http://192.168.0.17:24783/site/index/app?client=phonegap/1.0";
       var xhr;
       if (window.XMLHttpRequest) {
         xhr = new XMLHttpRequest();
@@ -39,7 +42,7 @@
     }
     document.getElementById("status").innerHTML =
         "Click to reconnect";
-  }, false);
+  };
   window.onunload = function(){};
 </script>
 </body>
