Facebook login should work with production

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <script src="http://192.168.0.17:7777/target/target-script-min.js#anonymous"></script>
   <script src="phonegap.js"></script>
   <script src="cdv-plugin-fb-connect.js"></script>
   <script src="facebook-js-sdk.js"></script>
@@ -16,7 +15,7 @@
 <script type="text/javascript">
   window.onload = function() {
     try {
-      var url = "http://192.168.0.17:24783/site/index/app?client=phonegap/1.0";
+      var url = "http://www.vagabond.land/site/index/app?client=phonegap/1.0";
       var xhr;
       if (window.XMLHttpRequest) {
         xhr = new XMLHttpRequest();
