--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <script type="text/javascript">
   window.onload = function() {
     try {
-      var url = "http://www.vagabond.land/site/index/app?client=phonegap/1.0";
+      var url = "http://www.vagabond.land/app/index/app?client=phonegap/1.0";
       var xhr;
       if (window.XMLHttpRequest) {
         xhr = new XMLHttpRequest();
