--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div style="text-align: center" onclick='document.location.reload()'>
   <br><br><br>
   <img src="logo-36-30.png" width="36" height="36"><br><br>
-  <div id="status" style="font-family: sans-serif; font-weight:300">Loading</div>
+  <div id="status" style="font-family: sans-serif; font-weight:300">Loading<br><br><img src="loading.gif"></div>
 </div>
 <script type="text/javascript">
   window.onload = function() {
